# Xenochat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TODOWRITE_STATUS.md  Xenochat项目蓝图.txt  deny.toml  pnpm-lock.yaml  pyproject.toml  前身项目总结.txt
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: models.toml  platforms.toml  xenochat.toml
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  server.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: audit.rs  config.rs  crypto.rs  lib.rs  secrets.rs  security.rs  telemetry.rs
crates/core/: Cargo.toml
crates/core/src/: emotion.rs  lib.rs  memory.rs  message.rs  orchestrator.rs  persona.rs  planner.rs  plugin.rs  safety.rs  tool.rs  trigger.rs
crates/discord/: Cargo.toml
crates/discord/src/: lib.rs
crates/googlechat/: Cargo.toml
crates/googlechat/src/: lib.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: lib.rs
crates/imessage/: Cargo.toml
crates/imessage/src/: lib.rs
crates/instagram/: Cargo.toml
crates/instagram/src/: lib.rs
crates/kakaotalk/: Cargo.toml
crates/kakaotalk/src/: lib.rs
crates/line/: Cargo.toml
crates/line/src/: lib.rs
crates/messenger/: Cargo.toml
crates/messenger/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/qq/: Cargo.toml
crates/qq/src/: lib.rs
crates/signal/: Cargo.toml
crates/signal/src/: lib.rs
crates/skype/: Cargo.toml
crates/skype/src/: lib.rs
crates/slack/: Cargo.toml
crates/slack/src/: lib.rs
crates/teams/: Cargo.toml
crates/teams/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
crates/viber/: Cargo.toml
crates/viber/src/: lib.rs
crates/wechat/: Cargo.toml
crates/wechat/src/: lib.rs
crates/whatsapp/: Cargo.toml
crates/whatsapp/src/: lib.rs
crates/zoom/: Cargo.toml
crates/zoom/src/: lib.rs
docs/architecture/: system-architecture.md
docs/compliance/: platform-gate-template.md
docs/reference/: api-contracts.md  blueprint-requirements-register.md  legacy-ecosystem-complete-audit.md  originality-policy.md  secret-management.md
docs/security/: security-baseline.md  threat-model.md
frontend/: index.html  package.json  tsconfig.app.json
frontend/src/: App.js  App.tsx  styles.css
scripts/: README.md  check_no_npm.sh  check_todo_policy.sh  originality_audit.py  security_audit.sh  sync_to_github_mirror.sh
tests/: README.md
