[package]
name = "xenochat-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xenochat-common = { path = "../common" }
xenochat-core = { path = "../core" }
xenochat-protocol = { path = "../protocol" }

[lints]
workspace = true
