[package]
name = "xenochat-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "sync", "time"] }
xenochat-adapter = { path = "../adapter" }
xenochat-common = { path = "../common" }
xenochat-core = { path = "../core" }
xenochat-protocol = { path = "../protocol" }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }

[dev-dependencies]
http-body-util = "0.1.3"

[lints]
workspace = true
