[package]
name = "xenochat-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.15.0"

[lints]
workspace = true
